# internal/api/server.go
@@ -126,6 +126,10 @@ func (srv *Server) routes() {
 	m.HandleFunc("/api/v1/dhcp/chnroutes/update", srv.requireAuth(srv.handleDHCPChnroutesUpdate))
 	m.HandleFunc("/api/v1/dhcp/apply", srv.requireAuth(srv.handleDHCPApply))
 	m.HandleFunc("/api/v1/dhcp", srv.requireAuth(srv.handleDHCP))
+	m.HandleFunc("/api/v1/snmp/install", srv.requireAuth(srv.handleSNMPInstall))
+	m.HandleFunc("/api/v1/snmp/service", srv.requireAuth(srv.handleSNMPService))
+	m.HandleFunc("/api/v1/snmp/apply", srv.requireAuth(srv.handleSNMPApply))
+	m.HandleFunc("/api/v1/snmp", srv.requireAuth(srv.handleSNMP))
 	m.HandleFunc("/api/v1/routes/apply", srv.requireAuth(srv.handleRoutesApply))
 	m.HandleFunc("/api/v1/frr/dynamic-routing/status", srv.requireAuth(srv.handleFRRDynamicRoutingStatus))
 	m.HandleFunc("/api/v1/frr/dynamic-routing/apply", srv.requireAuth(srv.handleFRRDynamicRoutingApply))
